--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test:unit": "mocha ./test/unit/**/*",
-    "dev": "node app.js",
+    "dev": "nodemon app.js",
     "cy:run": "cypress run",
     "test:acceptance": "yarn dev & wait-on http://localhost:3000 && yarn cy:run ; killall node"
   },
@@ -22,14 +22,20 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "cypress": "3.4.1",
+    "firebase": "7.2.2",
+    "http": "^0.0.0",
     "mocha": "^6.2.2",
     "nock": "^11.6.0",
+    "nodemon": "^1.19.4",
     "sinon": "^7.5.0",
     "supertest": "^4.0.2",
     "wait-on": "3.3.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "express": "^4.17.1"
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "hbs": "^4.0.6",
+    "path": "^0.12.7"
   }
 }
