--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test:unit": "mocha ./test/unit/**/*",
     "dev": "nodemon app.js",
     "cy:run": "cypress run",
-    "test:acceptance": "yarn dev & wait-on http://localhost:3000 && yarn cy:run ; killall node"
+    "test:acceptance": "yarn dev & wait-on http://localhost:3000 && yarn cy:run ; killall node",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -29,13 +30,15 @@
     "nodemon": "^1.19.4",
     "sinon": "^7.5.0",
     "supertest": "^4.0.2",
-    "wait-on": "3.3.0"
+    "wait-on": "3.3.0",
+    "webpack-cli": "^3.3.9"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "webpack": "^4.41.2"
   }
 }
