--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/antogeorgiadis/gos#readme",
   "devDependencies": {
+    "@babel/node": "^7.6.3",
     "chai": "^4.2.0",
     "cypress": "3.4.1",
     "firebase": "7.2.2",
@@ -30,15 +31,18 @@
     "nodemon": "^1.19.4",
     "sinon": "^7.5.0",
     "supertest": "^4.0.2",
-    "wait-on": "3.3.0",
-    "webpack-cli": "^3.3.9"
+    "wait-on": "3.3.0"
   },
   "dependencies": {
     "axios": "^0.19.0",
-    "body-parser": "^1.19.0",
+    "babel-cli": "6",
+    "babel-loader": "^8.0.6",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-react-app": "3",
     "express": "^4.17.1",
     "hbs": "^4.0.6",
     "path": "^0.12.7",
-    "webpack": "^4.41.2"
+    "react-dom": "^16.11.0",
+    "react-dom-server": "^0.0.5"
   }
 }
